[package]
name = "grrs"
version = "0.1.0"
authors = ["Victor Røer <viggo00@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
clap-verbosity-flag = "0.3.1"
anyhow = "1.0"
log = "0.4.14"
env_logger = "0.8.3"